[gd_scene load_steps=7 format=2]

[ext_resource path="res://MapContainer/MapContainer.gd" type="Script" id=1]
[ext_resource path="res://MapContainer/LeftPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://MapContainer/Map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://MapContainer/RightPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://MapContainer/EventContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/MainMenu.tscn" type="PackedScene" id=6]

[node name="MapContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.56763
margin_top = 2.37842
margin_right = 3.56763
margin_bottom = 2.37842
rect_scale = Vector2( 0.999217, 1 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 21.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 14.0
text = "Day"

[node name="Budgetlabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 974.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Budget"
align = 1

[node name="TimeLabel" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 978.0
margin_right = 1010.0
margin_bottom = 14.0
text = "Time"

[node name="ClockIncrement" type="Timer" parent="CanvasLayer/PanelContainer/HBoxContainer/TimeLabel"]
autostart = true

[node name="Map" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
focus_mode = 2
size_flags_horizontal = 3

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="LeftPanelContainer" type="PanelContainer" parent="CanvasLayer3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -14.0
margin_right = 42.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPanel" parent="CanvasLayer3/LeftPanelContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 35.0
margin_bottom = 21.0
mouse_filter = 2

[node name="CanvasLayer4" type="CanvasLayer" parent="."]

[node name="RightPanelContainer" type="PanelContainer" parent="CanvasLayer4"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -7.0
margin_bottom = 7.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPanel" parent="CanvasLayer4/RightPanelContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -86.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventContainer" parent="CanvasLayer2/PanelContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 79.0
size_flags_vertical = 3

[node name="MainMenu" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 4.0
rect_scale = Vector2( 1, 1 )
[connection signal="timeout" from="CanvasLayer/PanelContainer/HBoxContainer/TimeLabel/ClockIncrement" to="." method="_on_ClockIncrement_timeout"]
